# dfe-curriculum-ontology

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  HISTORY.md  IMPLEMENTATION-PLAN.md  PLAN.md  PROMPTS.md  README.md  TODO.md  ontology-documentation.txt  pyproject.toml
constraints/: curriculum-constraints.ttl
deployment/: DEPLOY.md  Dockerfile  Dockerfile.no-secrets  MANUAL-DEPLOY.md  SECURITY.md  SETUP.md  deploy-without-secrets.sh  deploy.sh  entrypoint.sh  fuseki-config.ttl  generate-local-passwords.sh  generate-shiro-config.sh  setup-secrets.sh  shiro.ini
docs/: API-EXAMPLES.md  CHANGE-DETECTION-EXPLAINED.md  CHANGE-DETECTION-VISUAL.md  FILE-DEPENDENCY-MAPPING.md  HANDLING-NEW-SUBJECTS.md  SANITY-UPDATE-QUICK-REFERENCE.md  SANITY-UPDATE-STRATEGIES.md  cicd-validation.md  examples.md  extending.md  model.md  proposed-change-to-resolve-conflicting-role-of-subject-class.md  standards-compliance.md  validation.md
ontology/: curriculum-constraints.ttl  curriculum-ontology.ttl  dfe-curriculum-constraints.ttl  dfe-curriculum-ontology.ttl
queries/: full-curriculum.sparql  science-ks3.sparql  subjects-index.sparql
sanity-sample-data/: sample-data.json
sanity-schemas/: INTEGRATION-GUIDE.md  contentDescriptor.js  contentSubdescriptor.js  discipline.js  keyStage.js  phase.js  progression.js  scheme.js  strand.js  subject.js  substrand.js  subsubject.js  theme.js  yearGroup.js
scripts/: .last-run-timestamp  build-static-data.sh  export_to_neo4j.py  merge_ttls.py  neo4j_export_config.json  sanity_to_ttl.py  temp.txt  (+4 more)
(+91 files in other folders)
