[project]
name = "uk-curriculum-ontology"
version = "0.1.0"
description = "UK Curriculum Ontology with SHACL validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyshacl>=0.30.1",
    "rdflib>=7.5.0",
    "rdflib-neo4j>=0.6.0",
    "neo4j>=5.15.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
